--- a/index.html
+++ b/index.html
@@ -5,10 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Commerce & ERP</title>
     <link rel="stylesheet" href="styles.css" />
+
+    <style>
+      ul {
+        list-style: none;
+        padding: 0;
+      }
+  
+      ul li a {
+        text-decoration: none; 
+        color: white; 
+      }
+    </style>
   </head>
 
   <body>
-    <div class="sidebar">
+    <div class="container">
+      <h1 id="title">Lunching Soon....</h1>
+      <div class="counters">
+        <div class="counter">
+          <span id="days">NA</span>
+          <p>Days</p>
+        </div>
+
+        <div class="counter">
+          <span id="hours">NA</span>
+          <p>Hours</p>
+        </div>
+
+        <div class="counter">
+          <span id="minutes">NA</span>
+          <p>Minutes</p>
+        </div>
+
+        <div class="counter">
+          <span id="seconds">NA</span>
+          <p>Seconds</p>
+        </div>
+      </div>
+
+      <div>
+        <ul>
+          <li><a href="tel:+91 9679482955">Contact me on Call ✆ </a></li>
+          <li> &nbsp; or </li>
+          <li><a href="https://sastik-kumar-das.vercel.app/" target="_blank"><b>__@SasTik</b></a></li>
+        </ul>
+      </div>
+    </div>
+
+    <script src="./script.js"></script>
+
+
+
+
+    <!-- <div class="sidebar">
       <h2>Content</h2>
       <ul>
         <li><a href="#servlet-description">1. Servlet description</a></li>
@@ -22,6 +72,6 @@
       <footer>
         <p>© 2024 E-Commerce & ERP __SasTik</p>
       </footer>
-    </div>
+    </div> -->
   </body>
 </html>
