--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div>
         <ul>
           <!-- <li><a href="tel:+91 9679482955">Contact me on Call ✆ </a></li> -->
-          <li><a href="https://wa.me/message/GDXNY4VEZAGWB1" target="_blank">Contact me on whatsapp 💬 </a></li>
+          <li><a href="https://wa.me/message/GDXNY4VEZAGWB1" target="_blank">Contact me on 💬 </a></li>
           <li> &nbsp; or </li>
           <li><a href="https://sastik-kumar-das.vercel.app/" target="_blank"><b>__@SasTik</b></a></li>
         </ul>
